--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,10 +6,6 @@ spring.r2dbc.pool.max-size=20
 spring.r2dbc.pool.max-idle-time=30
 spring.r2dbc.pool.validation-query=SELECT 1
 
-#spring.flyway.url=jdbc:postgresql://127.0.0.1:5432/lab4
-#spring.flyway.user=lab4
-#spring.flyway.password=lab4
-
-#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/lab4
-#spring.datasource.username=lab4
-#spring.datasource.password=lab4
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/lab4
+spring.datasource.username=lab4
+spring.datasource.password=lab4
